--- a/public/posts/home.mdx
+++ b/public/posts/home.mdx
@@ -8,10 +8,10 @@ Before most APIs and API clients can be run in production, they need a number of
 
 | Quality | Description |
 | ------- | ----------- | 
-| <span style={{color:'green'}}>**Secure**</span> | Client call APIs using message credentials containing user attributes that APIs use to protect business data. |
-| <span style={{color:'green'}}>**Reliable**</span> | Clients and APIs handle error, expiry and concurrency conditions correctly. |
-| <span style={{color:'green'}}>**Productive**</span> | Code is readable and cleanly separated so that people understand it and can grow the business logic. |
-| <span style={{color:'green'}}>**Scalable**</span> | Once integrated you can extend the architecture to many APIs and clients without extra complexity. |
+| Secure | Client call APIs using message credentials containing user attributes that APIs use to protect business data. |
+| Reliable | Clients and APIs handle error, expiry and concurrency conditions correctly. |
+| Productive | Code is readable and cleanly separated so that people understand it and can grow the business logic. |
+| Scalable | Once integrated you can extend the architecture to many APIs and clients without extra complexity. |
 
 ### The OAuth 2.0 Authorization Framework
 
@@ -23,10 +23,10 @@ Yet I have often seen people struggle to implement OAuth and realise its benefit
 
 I explain a setup that enables you to run secure end-to-end API and client flows. I only use basic OAuth security, but once you have the right setup and separation you are well-placed to implement more advanced use cases. In addition to OAuth integration I explain some lessons I’ve learned to enable resilient API and client journeys:
 
-- Designing for <span style={{color:'green'}}>**manageability**</span> to avoid pain points.
-- Coding with <span style={{color:'green'}}>**portability**</span> to keep future options open.
-- Ensuring <span style={{color:'green'}}>**reliability**</span> by rehearsal of failure scenarios.
-- Enabling <span style={{color:'green'}}>**productivity**</span> due to an investment in developer setups.
+- Designing for manageability to avoid pain points.
+- Coding with portability to keep future options open.
+- Ensuring reliability by rehearsal of failure scenarios.
+- Enabling productivity due to an investment in developer setups.
 
 ### Code Samples
 
