--- a/public/posts/how-to-run-the-react-js-spa.mdx
+++ b/public/posts/how-to-run-the-react-js-spa.mdx
@@ -18,8 +18,8 @@ You need to use this blog’s web development domain. Add a local DNS entry in y
 
 | OS | Path |
 | -- | ---- |
-| <span style={{color:'green'}}>**Windows**</span> | c:\system32\drivers\etc\hosts |
-| <span style={{color:'green'}}>**macOS / Linux**</span> | /etc/hosts |
+| Windows | c:\system32\drivers\etc\hosts |
+| macOS / Linux | /etc/hosts |
 
 Add the following entry to point the SPA's web origin to your local computer:
 
@@ -33,9 +33,9 @@ The repository's code consists of the following main areas:
 
 | Component | Description |
 | --------- | ----------- |
-| <span style={{color:'green'}}>**spa**</span> | The code for the SPA, which calls APIs using secure cookies. |
-| <span style={{color:'green'}}>**webhost**</span> | A web host for local computer setups, to serve web static content to the browser. |
-| <span style={{color:'green'}}>**deployment**</span> | Resources used to manage and automate web host deployments. |
+| spa | The code for the SPA, which calls APIs using secure cookies. |
+| webhost | A web host for local computer setups, to serve web static content to the browser. |
+| deployment | Resources used to manage and automate web host deployments. |
 
 <div className='smallimage'>
     <img src='../images/230/code-layout.jpg' alt='code layout' />
@@ -67,9 +67,9 @@ React provides a modern toolset that helps to enable productivity:
 
 | Benefit | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**Markup**</span> | A strongly typed and secure way to work with markup and the DOM, including handling of dangerous input. |
-| <span style={{color:'green'}}>**Components**</span> | A componentized development model, that promotes clean code and a separation of concerns. |
-| <span style={{color:'green'}}>**Ecosystem**</span> | Web development best practice techniques from the React community. |
+| Markup | A strongly typed and secure way to work with markup and the DOM, including handling of dangerous input. |
+| Components | A componentized development model, that promotes clean code and a separation of concerns. |
+| Ecosystem | Web development best practice techniques from the React community. |
 
 ### Step 5: Build the Code
 
