--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -316,8 +316,8 @@ For the SPA, a build phase is essential, for the following reasons:
 
 | Reason | Description |
 | ------ | ----------- |
-| <span style={{color:'green'}}>**Browser Support**</span> | Produce JavaScript code that browsers can execute. |
-| <span style={{color:'green'}}>**Web Performance**</span> | Reduce code size so that bundle sizes stay small, and the SPA performs well. |
+| Browser Support | Produce JavaScript code that browsers can execute. |
+| Web Performance | Reduce code size so that bundle sizes stay small, and the SPA performs well. |
 
 The [webpack](https://webpack.js.org/) tool is used. I use it for one main task, to produce the JavaScript bundles expressed in the final *index.html* file:
 
